# nodec_input

./: CMakeLists.txt
.github/workflows/: build.yaml
include/nodec_input/keyboard/: key.hpp
include/nodec_input/mouse/: mouse.hpp
tests/: CMakeLists.txt  key.cpp
